--- a/index.html
+++ b/index.html
@@ -117,19 +117,21 @@
                 <div class="author-info">Concordia University Graduate. Entertainment and Sports Writer. Worked alongside The Richest, The Sportster, Hot Cars, The Talko, and currently The Things. Currently writing and editing for The Things, specializing in TV, Movies</div>
             </div>
         </section>
-        <aside class="advertisements">
-            <h4>Trending Now</h4>
-            <div class="trending-now">
-                <img src="https://picsum.photos/100/70" alt="">
-                <div class="caption"><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</a></div>
-            </div>
-            <div class="trending-now">
-                <img src="https://picsum.photos/100/71" alt="">
-                <div class="caption"><a href="#">Sit voluptatibus sint incidunt a, commodi nesciunt dolorum.</a></div>
-            </div>
-            <div class="trending-now">
-                <img src="https://picsum.photos/100/72" alt="">
-                <div class="caption"><a href="#">Rem, tempore consectetur! Facere eaque vel molestias unde modi.</a></div>
+        <aside>
+            <div class="advertisements">
+                <h4>Trending Now</h4>
+                <div class="trending-now">
+                    <img src="https://picsum.photos/100/70" alt="">
+                    <div class="caption"><a href="#">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</a></div>
+                </div>
+                <div class="trending-now">
+                    <img src="https://picsum.photos/100/71" alt="">
+                    <div class="caption"><a href="#">Sit voluptatibus sint incidunt a, commodi nesciunt dolorum.</a></div>
+                </div>
+                <div class="trending-now">
+                    <img src="https://picsum.photos/100/72" alt="">
+                    <div class="caption"><a href="#">Rem, tempore consectetur! Facere eaque vel molestias unde modi.</a></div>
+                </div>
             </div>
         </aside>
     </main>
